SFDC/ApexLanguage/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactIDs__c</fullName>
        <label>ContactIDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit_Card_Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Update__c</fullName>
        <formula>TODAY()  -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Update</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>weekday__c</fullName>
        <label>weekday</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Billing</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR( BillingCountry == &apos;US&apos;,BillingCountry == &apos;USA&apos;),
  NOT(REGEX(BillingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;)) 
)</errorConditionFormula>
        <errorMessage>Please enter correct BillingPosrrtalCode</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Numeric</fullName>
        <active>false</active>
        <errorConditionFormula>IF((ISBLANK( AccountNumber) ),FALSE,NOT (ISNUMBER( AccountNumber )))</errorConditionFormula>
        <errorMessage>Account Number must be numeric..!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Card_Number</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorMessage>Credit card number is not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_Pct</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
     Mix_Pct__c &lt; 0,
   Mix_Pct__c &gt; 1
)</errorConditionFormula>
        <errorMessage>Mix Pct must in between 0 and 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_of_5</fullName>
        <active>false</active>
        <errorConditionFormula>IF(MOD( Multiple_of_5__c ,5)== 0 ,FALSE,TRUE)</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>must be multiple of 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weekday_rule</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
OR(  MOD(weekday__c - Date(2016,1,2),7) ==0, MOD(weekday__c - Date(2016,1,2),7) ==1 ),
TRUE,
FALSE
)</errorConditionFormula>
        <errorDisplayField>weekday__c</errorDisplayField>
        <errorMessage>Please Enter weekday</errorMessage>
    </validationRules>
</CustomObject>